feat: add cache and deploy audit log for admin
